--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 server.error.include-exception=false
 server.error.include-stacktrace=never
 server.error.include-message=always
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/parking
+spring.datasource.username=postgres
+spring.datasource.password=Manaus123!@#
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
+spring.jpa.defer-datasource-initialization=true
