--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
 spring.jpa.defer-datasource-initialization=true
+
+spring.security.user.name=robsonfarias
+spring.security.user.password=Manaus123!@#
+spring.security.user.roles="USER"
